--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@vuepress/bundler-vite": "^2.0.0-rc.7",
+    "@vuepress/plugin-copy-code": "^2.0.0-rc.42",
     "@vuepress/plugin-search": "^2.0.0-rc.42",
     "@vuepress/theme-default": "^2.0.0-rc.11",
     "vue": "^3.4.0",
